<resources>
    <string name="app_name">Gabbi App</string>

    <string name="exception_user_does_not_exists">User does not exist</string>

    <string name="torah_bereishit">Bereishit</string>
    <string name="torah_shemot">Shemot</string>
    <string name="torah_vayikra">Vayikra</string>
    <string name="torah_bamidbar">Bamidbar</string>
    <string name="torah_devarim">Devarim</string>

    <string name="database_name_torah">Torah</string>

    <string name="database_key_bereishit">bereishit</string>
    <string name="database_key_shemot">shemot</string>
    <string name="database_key_vayikra">vayikra</string>
    <string name="database_key_bamidbar">bamidbar</string>
    <string name="database_key_devarim">devarim</string>

    <string name="database_key_bereishit_no_vowels">bereishit_no_vowels</string>
    <string name="database_key_shemot_no_vowels">shemot_no_vowels</string>
    <string name="database_key_vayikra_no_vowels">vayikra_no_vowels</string>
    <string name="database_key_bamidbar_no_vowels">bamidbar_no_vowels</string>
    <string name="database_key_devarim_no_vowels">devarim_no_vowels</string>

    <string name="event_date_format">dd-MMM-yyyy</string>

    <string name="dynamoDB_table_events">Events</string>
    <string name="key_event_name">event_name</string>
    <string name="key_event_date">event_date</string>
    <string name="key_num_aliyahs">num_aliyahs</string>
    <string name="key_num_aliyahs_taken">num_aliyahs_taken</string>

    <string name="dynamoDB_table_aliyahs">Aliyahs</string>
    <string name="dynamoDB_aliyahs_index_name">aliyah_event-aliyah_name-index</string>
    <string name="key_aliyah_name">aliyah_name</string>
    <string name="key_aliyah_event">aliyah_event</string>
    <string name="key_reading">reading</string>
    <string name="key_aliyah_reader">aliyah_reader</string>
    <string name="key_aliyah_number">aliyah_number</string>
    <string name="key_aliyah_taken">aliyah_taken</string>
    <string name="key_num_psukim">num_psukim</string>

    <string name="loading">Loading</string>

    <string name="event_searchview_query_hint">Search For An Event</string>

    <string name="aliyah_num_psukim">%d psukim</string>
    <string name="bundle_argument_event_name">eventName</string>

    <string name="user_bundle_key">user</string>
    <string name="email_bundle_key">email</string>
    <string name="password_bundle_key">password</string>

    <string name="preferences_name_user_preferences">user_preferences</string>
    <string name="preferences_key_user_info">user_info</string>

    <string name="arg_key_reading">reading</string>

    <string name="snackbar_need_internet_connection">You must be connected to the internet.</string>

    <string name="zmanim_sunrise">Sunrise</string>
    <string name="zmanim_sof_zman_shema_mga">Sof Zman Shema MGA</string>
    <string name="zmanim_sof_zman_shema_gra">Sof Zman Shema Gra</string>
    <string name="zmanim_sof_zman_tefilah_gra">Sof Zman Tefilah Gra</string>
    <string name="zmanim_sof_zman_tefilah_mga">Sof Zman Tefilah MGA</string>
    <string name="zmanim_chatzos">Chatzos</string>
    <string name="zmanim_mincha_gedolah">Mincha Gedolah</string>
    <string name="zmanim_plag_hamincha">Plag Hamincha</string>
    <string name="zmanim_shkia">Shkia</string>
    <string name="zmamin_tzeis">Tzeis</string>
    <string name="zmanim_candle_lighting">Candle Lighting</string>
    <string name="zmanim_havdalah">Havdalah</string>
</resources>
